--- a/dso/branches/3.0/code/demos/pojo/coordination/build.xml
+++ b/dso/branches/3.0/code/demos/pojo/coordination/build.xml
@@ -15,7 +15,7 @@
 	</target>
 
 	<target name="build" depends="init" description="build the source ">
-		<javac target="1.4" source="1.4" srcdir="${src.dir}" classpath="lib/concurrent-1.3.4.jar" destdir="${build.dir}" />
+		<javac target="1.5" source="1.5" srcdir="${src.dir}" destdir="${build.dir}" />
 	</target>
 
 	<target name="clean" description="clean up">
