INT-710: UPdated with 3.0.0-stable1 info

--- a/update-checker/update-list.properties
+++ b/update-checker/update-list.properties
@@ -1,12 +1,17 @@
 ## Top level keys
-# terracotta.versions = 3.0.0-stable0, 2.7.3, 2.7.3, 2.7.3, 2.7.3-stable1, 2.7.3-stable0, 2.7.3, 2.7.3, 2.7.3,  2.6.0, 2.6-stable4, 2.6-stable1, 2.6-stable0, 2.5.4, 2.5.2, 2.5.1, 2.5.0, 2.5-stable1, 2.5-stable1, 2.5-stable0
+# terracotta.versions = 3.0.0-stable1, 3.0.0-stable0, 2.7.3, 2.7.3, 2.7.3, 2.7.3-stable1, 2.7.3-stable0, 2.7.3, 2.7.3, 2.7.3,  2.6.0, 2.6-stable4, 2.6-stable1, 2.6-stable0, 2.5.4, 2.5.2, 2.5.1, 2.5.0, 2.5-stable1, 2.5-stable1, 2.5-stable0
 # 2.4.8, 2.4.5, 2.4.4, 2.4.3, 2.4.2, 2.4.1, 2.4.0, 2.4-stable1, 2.4-stable0
 # 2.3.0, 2.3-stable1, 2.3-stable0
 # general.notice = This notice should rarely, if ever, be used as everyone running the console\nwill see it
 
-## 3.0.0-stable0 -- Latest Feature Complete Build
-3.0.0-stable0.updates			= 
-3.0.0-stable0.notices			= This is the Terracotta 3.0.0-stable0 Feature Complete Build
+## 3.0.0-stable1 -- Latest Feature Complete Build
+3.0.0-stable1.updates			= 
+3.0.0-stable1.notices			= This is the Terracotta 3.0.0-stable0 Feature Complete Build
+3.0.0-stable1.release notes	= http://orgstage/web/display/docs/Release+Notes
+
+## 3.0.0-stable0 -- 
+3.0.0-stable0.updates			= 3.0.0-stable1
+3.0.0-stable0.notices			= Terracotta recommends upgrading to the latest stable build, 3.0.0-stable1, for best results
 3.0.0-stable0.release notes	= http://orgstage/web/display/docs/Release+Notes
 
 ## 2.7.3 -- Latest 2.7 version
