Added TOCGuide entry.

--- a/reflector/reflector.properties
+++ b/reflector/reflector.properties
@@ -21,6 +21,7 @@ default.update.properties=http://svn.terracotta.org/svn/tc/update-checker/update
 3.0.SessionsQuickStart=http://www.terracotta.org/web/display/docs/Sessions+Configurator+Guide
 3.0.SessionsTutorial=http://www.terracotta.org/web/display/orgsite/Sessions+Tutorial
 3.0.ConsoleGuide=http://www.terracotta.org/web/display/docs/Terracotta+Developer+Console
+3.0.TOCGuide=http://www.terracotta.org/web/display/docs/Terracotta+Operations+Center
 3.0.ConceptAndArchGuide=http://www.terracotta.org/web/display/docs/Concept+and+Architecture+Guide
 3.0.ConfigGuideAndRef=http://www.terracotta.org/web/display/docs/Configuration+Guide+and+Reference
 3.0.PluginReferenceGuide=http://www.terracotta.org/web/display/docs/Eclipse+Plugin+Guide
