--- a/dso/branches/3.0/code/base/common/src.resources/com/tc/properties/tc.properties
+++ b/dso/branches/3.0/code/base/common/src.resources/com/tc/properties/tc.properties
@@ -242,11 +242,11 @@ l1.jvm.check.compatibility = true
 ###########################################################################################
 l1.modules.repositories =
 l1.modules.default = \
-  org.terracotta.modules.excludes-config;bundle-version:=3.0.1,\
-  org.terracotta.modules.guimodels-config;bundle-version:=3.0.1,\
-  org.terracotta.modules.jdk15-preinst-config;bundle-version:=3.0.1,\
-  org.terracotta.modules.spring-config;bundle-version:=3.0.1,\
-  org.terracotta.modules.standard-config;bundle-version:=3.0.1
+  org.terracotta.modules.excludes-config;bundle-version:=3.0.1.SNAPSHOT,\
+  org.terracotta.modules.guimodels-config;bundle-version:=3.0.1.SNAPSHOT,\
+  org.terracotta.modules.jdk15-preinst-config;bundle-version:=3.0.1.SNAPSHOT,\
+  org.terracotta.modules.spring-config;bundle-version:=3.0.1.SNAPSHOT,\
+  org.terracotta.modules.standard-config;bundle-version:=3.0.1.SNAPSHOT
 l1.modules.additional =
 l1.modules.tc-version-check =
 
