--- a/dso/branches/3.0/code/base/common/tests.base.resources/com/tc/util/integration-modules.properties
+++ b/dso/branches/3.0/code/base/common/tests.base.resources/com/tc/util/integration-modules.properties
@@ -5,5 +5,5 @@
 # For the moment (starting from 2.5.0 release), all modules have the same
 # module version as the kit version
 
-clustered-surefire-2.3=org.terracotta.modules.clustered-surefire-2.3;bundle-version:=3.0.1-SNAPSHOT
+clustered-surefire-2.3=org.terracotta.modules.clustered-surefire-2.3;bundle-version:=3.0.1
 
