Changes supporting (1) moving Eclipse plug-in to forge and (2) tim-hibernate-cache dev tool.

--- a/dso/branches/h2lc-dev-tool/code/base/buildconfig/distribution/dso-opensource.def.yml
+++ b/dso/branches/h2lc-dev-tool/code/base/buildconfig/distribution/dso-opensource.def.yml
@@ -62,6 +62,7 @@ bundled_components:
             install_directory: api-jars
             modules:
               - common-api
+              - deploy-api
               - dso-l1-api
               - license-common
               - management-api
