added link to beta kit.

--- a/reflector/reflector.properties
+++ b/reflector/reflector.properties
@@ -7,6 +7,10 @@ default.IntegrationsWicket=http://www.terracotta.org/web/display/orgsite/Integra
 default.update.properties=http://svn.terracotta.org/svn/tc/update-checker/update-list.properties
 ### End default
 
+### Start 3.1-beta
+3.1.beta-kit=http://s3.amazonaws.com/terracotta-3.1-beta/terracotta-3.1.0-beta.tar.gz
+###
+
 ### Start 3.1 --Note: KitID 3.1 is referenced in trunk, it will point to the current docs
 3.1.Forums=http://forums.terracotta.org/forums/forums/list.page
 3.1.SupportServices= http://www.terracotta.org/web/display/enterprise/Support
