trying another style for beta kit.

--- a/reflector/reflector.properties
+++ b/reflector/reflector.properties
@@ -8,7 +8,7 @@ default.update.properties=http://svn.terracotta.org/svn/tc/update-checker/update
 ### End default
 
 ### Start 3.1-beta
-3.1.beta-kit=http://s3.amazonaws.com/terracotta-3.1-beta/terracotta-3.1.0-beta.tar.gz
+3.1.betakit=http://s3.amazonaws.com/terracotta-3.1-beta/terracotta-3.1.0-beta.tar.gz
 ###
 
 ### Start 3.1 --Note: KitID 3.1 is referenced in trunk, it will point to the current docs
