--- a/update-checker/update-list.properties
+++ b/update-checker/update-list.properties
@@ -1,8 +1,13 @@
 ## Top level keys
-# terracotta.versions = 3.0.1, 3.0.1-stable1, 3.0.1-stable0, 3.0.1, 3.0.1, 3.0.1, 3.0.1-stable1, 3.0.1-stable0, 3.0.1, 3.0.1, 3.0.1,  2.6.0, 2.6-stable4, 2.6-stable1, 2.6-stable0, 2.5.4, 2.5.2, 2.5.1, 2.5.0, 2.5-stable1, 2.5-stable1, 2.5-stable0
+# terracotta.versions = 3.1.0-stable0, 3.0.1, 3.0.1-stable1, 3.0.1-stable0, 3.0.1, 3.0.1, 3.0.1, 3.0.1-stable1, 3.0.1-stable0, 3.0.1, 3.0.1, 3.0.1,  2.6.0, 2.6-stable4, 2.6-stable1, 2.6-stable0, 2.5.4, 2.5.2, 2.5.1, 2.5.0, 2.5-stable1, 2.5-stable1, 2.5-stable0
 # 2.4.8, 2.4.5, 2.4.4, 2.4.3, 2.4.2, 2.4.1, 2.4.0, 2.4-stable1, 2.4-stable0
 # 2.3.0, 2.3-stable1, 2.3-stable0
 # general.notice = This notice should rarely, if ever, be used as everyone running the console\nwill see it
+
+## 3.1.0-stable0 -- 
+3.1.0-stable0.updates			= 
+3.1.0-stable0.notices			= Terracotta 3.1.0-stable0 is the latest milestone build of the upcoming Terracotta 3.1 release. You should only use Terracotta 3.1.0-stable0 if you are a beta tester and/or are comfortable experimenting with new unreleased software.
+3.1.0-stable0.release notes	= https://jira.terracotta.org/jira/browse/CDV?report=com.atlassian.jira.plugin.system.project:changelog-panel
 
 ## 3.0.1 -- Latest Feature Complete Build
 3.0.1.updates			= 
