method tracing works - no gui

--- a/dso/branches/chrisgeert_trace/code/base/common/src.resources/com/tc/properties/tc.properties
+++ b/dso/branches/chrisgeert_trace/code/base/common/src.resources/com/tc/properties/tc.properties
@@ -632,3 +632,9 @@ l2.remotejmx.idletime = 5
 #  stats.printer.intervalInMillis              - interval at which gathered stats are printed
 ###########################################################################################
 stats.printer.intervalInMillis = 5000
+
+###########################################################################################
+# Section :  Experimental Method Tracing
+#  method.tracing.enabled                      - if true will enable experimental method tracing support
+###########################################################################################
+method.tracing.enabled = true
