disable gui panels if tracing is disabled

--- a/dso/branches/chrisgeert_trace/code/base/common/src.resources/com/tc/properties/tc.properties
+++ b/dso/branches/chrisgeert_trace/code/base/common/src.resources/com/tc/properties/tc.properties
@@ -637,4 +637,4 @@ stats.printer.intervalInMillis = 5000
 # Section :  Experimental Method Tracing
 #  method.tracing.enabled                      - if true will enable experimental method tracing support
 ###########################################################################################
-method.tracing.enabled = true
+method.tracing.enabled = false
