--- a/dso/branches/3.1/code/base/buildconfig/distribution/dso-opensource.def.yml
+++ b/dso/branches/3.1/code/base/buildconfig/distribution/dso-opensource.def.yml
@@ -73,8 +73,8 @@ bundled_components:
               - legacy-test-tree
               - license-common
               - simulator
-        - api-api.version:
-            javadoc: true
+        - terracotta-api-api.version:
+            javadoc: true   
             install_directory: lib
             modules:
               - dso-cluster-api
@@ -187,8 +187,8 @@ postscripts:
           inject: 
             - lib/resources/build-data.txt
         - groupId: org.terracotta.api
-          artifact: api
-          file: lib/api-api.version.jar
+          artifact: terracotta-api
+          file: lib/terracotta-api-api.version.jar
           pom: poms/terracotta-api-pom.xml
           version: api.version
         - groupId: org.terracotta.api
