revert 12991, not meant for this branch

--- a/dso/branches/3.0/code/base/buildconfig/distribution/dso-enterprise.def.yml
+++ b/dso/branches/3.0/code/base/buildconfig/distribution/dso-enterprise.def.yml
@@ -57,7 +57,7 @@ bundled_components:
               - dso-l2-common
               - dso-statistics-api
               - management-api
-        - terracotta-api-api.version:
+        - api-api.version:
             javadoc: true
             install_directory: lib
             modules:
