--- a/dso/trunk/code/base/common/src.resources/com/tc/properties/tc.properties
+++ b/dso/trunk/code/base/common/src.resources/com/tc/properties/tc.properties
@@ -620,13 +620,16 @@ net.core.keepalive = false
 #   cvt.buffer.randomsuffix.enabled 	- If true, add a random suffix when a buffer is created
 #   cvt.store.randomsuffix.enabled  	- If true, add a random suffix when a store is created
 #   cvt.rest.interface.enabled      	- If false, the REST interface for the CVT will be
-#										  disabled. True by default
+#	                                      disabled. True by default
+#   cvt.client.fail.buffer.open         - If true, always fail the open of the CVT statistics buffer on a client. This is
+#                                         supposed to be used by tests. False by default
 ###########################################################################################
 cvt.retriever.notification.interval = 60
 cvt.statistics.logging.interval = 900
 cvt.buffer.randomsuffix.enabled = false
 cvt.store.randomsuffix.enabled = false
 cvt.rest.interface.enabled = true
+cvt.client.fail.buffer.open = false
 
 ###########################################################################################
 # Section :  HealthChecker { server(l2)->client(l1), server(l2)->server(l2) (HA), client(l1)->server(l2) }
@@ -724,6 +727,6 @@ stats.printer.intervalInMillis = 5000
 # license.resource.path                       - Resource path to license key
 # license.url                                 - URL to license key
 ###########################################################################################
-license.resource.path=
-license.url=
+#license.resource.path=
+#license.url=
 
