--- a/dso/branches/3.1/code/base/pom.xml
+++ b/dso/branches/3.1/code/base/pom.xml
@@ -207,7 +207,12 @@
          <groupId>net.sourceforge</groupId>
          <artifactId>yamlbeans</artifactId>
          <version>0.9.2</version>
-      </dependency>      
+      </dependency>
+      <dependency>
+        <groupId>com.google.collections</groupId>
+        <artifactId>google-collections</artifactId>
+        <version>1.0-rc2</version>
+      </dependency> 
 
       <!-- dependencies for tests -->
       <dependency>
