use reflector links

--- a/dso/trunk/code/base/buildconfig/distribution/dso-opensource.def.yml
+++ b/dso/trunk/code/base/buildconfig/distribution/dso-opensource.def.yml
@@ -134,8 +134,8 @@ postscripts:
         - location: lib/resources/tim-get.properties
         - kit-type:
             stable:
-              org.terracotta.modules.tool.dataFileUrl: http://stable-repo.terracotta.org.s3.amazonaws.com/maven2/tim-get/2/index.xml.gz
-              org.terracotta.modules.tool.relativeUrlBase: http://stable-repo.terracotta.org.s3.amazonaws.com/maven2
+              org.terracotta.modules.tool.dataFileUrl: http://www.terracotta.org/download/reflector/maven2-stable/tim-get/2/index.xml.gz
+              org.terracotta.modules.tool.relativeUrlBase: http://www.terracotta.org/download/reflector/maven2-stable
   - install-forge-tims:
       args:
         - tim-apache-struts-1.1
