--- a/dso/trunk/code/base/buildconfig/distribution/dso-opensource.def.yml
+++ b/dso/trunk/code/base/buildconfig/distribution/dso-opensource.def.yml
@@ -40,6 +40,11 @@ bundled_components:
           - tc-config-reference
   - common:
       module_packages:
+        - terracotta-l1:
+            install_directory: lib
+            add_dependencies: true
+            modules:
+              - dso-l1
         - terracotta-jmx-api:
             install_directory: lib
             modules:
@@ -168,6 +173,12 @@ postscripts:
           inject: 
             - lib/resources/build-data.txt
             - lib/resources/tim-get.properties
+        - groupId: org.terracotta
+          artifact: terracotta-l1
+          file: lib/terracotta-l1.jar
+          pom: poms/terracotta-l1-pom.xml
+          inject: 
+            - lib/resources/build-data.txt           
         - groupId: org.terracotta
           artifact: tcconfig
           file: lib/tcconfig-xmlbeans-generated.jar
