Streamlined set of dependencies in ivy and Maven. Added version group-config-for-l1. Fixed NPE in ThreadDumpUtilJdk16.java. Removed code/base/examples. Changed tim-get-tool to use XML support in JDK (as opposed to dom4j).

--- a/dso/branches/3.1/code/base/dso-l1-api/ivy.xml
+++ b/dso/branches/3.1/code/base/dso-l1-api/ivy.xml
@@ -2,6 +2,6 @@
 <ivy-module version="2.0">
   <info organisation="ibiblio" module="dso-l1-api"/>
   <dependencies>
-    <dependency name="trove" rev="1.1b5" org="terracotta"/>
+    <dependency name="trove" rev="1.1-beta-5" org="terracotta"/>
   </dependencies>
 </ivy-module>
