--- a/dso/branches/3.1/code/base/common-api/ivy.xml
+++ b/dso/branches/3.1/code/base/common-api/ivy.xml
@@ -8,11 +8,11 @@
     <dependency name="concurrent" rev="1.3.4" />
     <dependency name="jetty-util" rev="6.1.8" org="terracotta"/>
     <dependency name="jmxremote" rev="1.0.1_04" org="terracotta"/>
-    <dependency name="jmxri" rev="1.2.1" org="terracotta"/>
-    <dependency name="knopflerfish" rev="2.0.1-tc-20080108" org="terracotta"/>
+    <dependency name="knopflerfish-tc" rev="2.0.1" org="terracotta"/>
     <dependency name="commons-httpclient" rev="3.0.1"/>
     <dependency name="log4j" rev="1.2.9"/>
     <dependency name="xmlbeans-jsr173-api" rev="1.0" org="terracotta"/>
     <dependency name="xmlbeans" rev="2.4.0" org="terracotta"/>
+    <dependency name="xmlbeans-xpath" rev="2.4.0" org="terracotta"/>
   </dependencies>
 </ivy-module>
