--- a/dso/branches/3.1/code/base/common/.classpath
+++ b/dso/branches/3.1/code/base/common/.classpath
@@ -9,7 +9,6 @@
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/ant-1.7.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/ant-junit-1.7.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/ant-launcher-1.7.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="/dependencies/lib/antlr-2.7.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/bsh-2.0b4.jar"/>
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/commons-cli-1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/commons-collections-3.1.jar"/>
@@ -21,18 +20,15 @@
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/hsqldb-1.7.2.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/je-3.3.82.jar"/>
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/jmxremote-1.0.1_04.jar"/>
-	<classpathentry exported="true" kind="lib" path="/dependencies/lib/jmxri-1.2.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="/dependencies/lib/jmxtools-1.2_8.jar"/>
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/junit-3.8.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/junit-addons-1.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="/dependencies/lib/knopflerfish-2.0.1-tc-20080108.jar"/>
+	<classpathentry exported="true" kind="lib" path="/dependencies/lib/knopflerfish-tc-2.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/linked-child-process-1.0.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/log4j-1.2.9.jar"/>
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/native-tool-1.0.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="/dependencies/lib/servlet-api-2.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="/dependencies/lib/servlet-api-2.5-6.1.8.jar"/>
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/slf4j-nop-1.0.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="/dependencies/lib/trove-1.1b5.jar"/>
-	<classpathentry exported="true" kind="lib" path="/dependencies/lib/xml-resolver-1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="/dependencies/lib/trove-1.1-beta-5.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/common-api"/>
 	<classpathentry exported="true" kind="lib" path="lib.tests.unit/tctest-xmlbeans-generated.jar"/>
 </classpath>
