--- a/dso/branches/3.1/code/base/common/ivy.xml
+++ b/dso/branches/3.1/code/base/common/ivy.xml
@@ -2,24 +2,20 @@
 <ivy-module version="2.0">
   <info organisation="ibiblio" module="common"/>
   <dependencies>    
-	<dependency name="antlr" rev="2.7.3" org="terracotta"/>
-	<dependency name="bsh" rev="2.0b4" org="terracotta"/>
-        <dependency name="commons-cli" rev="1.1"/>
-	<dependency name="commons-collections" rev="3.1"/>
-	<dependency name="commons-io" rev="1.2"/>
-	<dependency name="commons-lang" rev="2.0"/>
-	<dependency name="commons-logging" rev="1.0.3"/>
-	<dependency name="concurrent" rev="1.3.4"/>
-        <dependency name="google-collect" rev="1.0-rc2"/>
-	<dependency name="knopflerfish" rev="2.0.1-tc-20080108" org="terracotta"/>
-	<dependency name="je" rev="3.3.82" org="terracotta"/>
-	<dependency name="jmxremote" rev="1.0.1_04" org="terracotta"/>
-	<dependency name="jmxri" rev="1.2.1" org="terracotta"/>
-	<dependency name="jmxtools" rev="1.2_8" org="terracotta"/>
-	<dependency name="log4j" rev="1.2.9"/>
-	<dependency name="xml-resolver" rev="1.1"/>
-	<dependency name="servlet-api" rev="2.4" org="terracotta"/>
-	<dependency name="slf4j-nop" rev="1.0.2" org="terracotta"/>
-	<dependency name="trove" rev="1.1b5" org="terracotta"/>
+    <dependency name="bsh" rev="2.0b4" org="terracotta"/>
+    <dependency name="commons-cli" rev="1.1"/>
+    <dependency name="commons-collections" rev="3.1"/>
+    <dependency name="commons-io" rev="1.2"/>
+    <dependency name="commons-lang" rev="2.0"/>
+    <dependency name="commons-logging" rev="1.0.3"/>
+    <dependency name="concurrent" rev="1.3.4"/>
+    <dependency name="google-collect" rev="1.0-rc2"/>
+    <dependency name="knopflerfish-tc" rev="2.0.1" org="terracotta"/>
+    <dependency name="je" rev="3.3.82" org="terracotta"/>
+    <dependency name="jmxremote" rev="1.0.1_04" org="terracotta"/>
+    <dependency name="log4j" rev="1.2.9"/>
+    <dependency name="servlet-api-2.5" rev="6.1.8" org="terracotta"/>
+    <dependency name="slf4j-nop" rev="1.0.2" org="terracotta"/>
+    <dependency name="trove" rev="1.1-beta-5" org="terracotta"/>
   </dependencies>
 </ivy-module>
