--- a/dso/branches/3.1/code/base/deploy/.classpath
+++ b/dso/branches/3.1/code/base/deploy/.classpath
@@ -5,7 +5,7 @@
 	<classpathentry excluding="**/.svn/*" kind="src" output="build.eclipse/tests.base.classes" path="tests.base"/>
 	<classpathentry excluding="**/.svn/*" kind="src" output="build.eclipse/tests.unit.classes" path="tests.unit"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
-	<classpathentry exported="true" kind="lib" path="/dependencies/lib/commons-codec-1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="/dependencies/lib/commons-codec-1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/commons-httpclient-3.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/jcommon-1.0.14.jar"/>
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/jetty-6.1.8.jar"/>
@@ -13,8 +13,9 @@
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/jfreechart-1.0.11.jar"/>
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/jline-0.9.9.jar"/>
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/jmxremote-1.0.1_04.jar"/>
-	<classpathentry exported="true" kind="lib" path="/dependencies/lib/jmxremote_optional-1.0.1_04-b58.jar"/>
-	<classpathentry exported="true" kind="lib" path="/dependencies/lib/treemap-tc-1.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="/dependencies/lib/jmxremote_optional-1.0.1_04.jar"/>
+	<classpathentry exported="true" kind="lib" path="/dependencies/lib/servlet-api-2.5-6.1.8.jar"/>
+	<classpathentry exported="true" kind="lib" path="/dependencies/lib/treemap-2.5.1.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/aspectwerkz"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/common"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/common-api"/>
