--- a/dso/branches/3.1/code/base/deploy/ivy.xml
+++ b/dso/branches/3.1/code/base/deploy/ivy.xml
@@ -4,13 +4,14 @@
   <dependencies>
 	<dependency name="jetty" rev="6.1.8" org="terracotta"/>
 	<dependency name="jetty-util" rev="6.1.8" org="terracotta"/>
+	<dependency name="servlet-api-2.5" rev="6.1.8" org="terracotta"/>
 	<dependency name="jfreechart" rev="1.0.11" org="terracotta"/>
 	<dependency name="jcommon" rev="1.0.14" org="terracotta"/>
-	<dependency name="jmxremote_optional" rev="1.0.1_04-b58" org="terracotta"/>
+	<dependency name="jmxremote_optional" rev="1.0.1_04" org="terracotta"/>
 	<dependency name="jmxremote" rev="1.0.1_04" org="terracotta"/>
-	<dependency name="treemap" rev="tc-1.0" org="terracotta"/>
+	<dependency name="treemap" rev="2.5.1" org="terracotta"/>
 	<dependency name="jline" rev="0.9.9" org="terracotta"/>
 	<dependency name="commons-httpclient" rev="3.0.1"/>
-	<dependency name="commons-codec" rev="1.3"/>
+	<dependency name="commons-codec" rev="1.2"/>
   </dependencies>
 </ivy-module>
