--- a/dso/branches/3.1/code/base/dso-l1-api/.classpath
+++ b/dso/branches/3.1/code/base/dso-l1-api/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry excluding="**/.svn/*" kind="src" output="build.eclipse/src.classes" path="src"/>
 	<classpathentry excluding="**/.svn/*" kind="src" output="build.eclipse/src.classes" path="src.resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
-	<classpathentry exported="true" kind="lib" path="/dependencies/lib/trove-1.1b5.jar"/>
+	<classpathentry exported="true" kind="lib" path="/dependencies/lib/trove-1.1-beta-5.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/aspectwerkz"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/common"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/common-api"/>
