--- a/dso/branches/3.1/code/base/management/ivy.xml
+++ b/dso/branches/3.1/code/base/management/ivy.xml
@@ -2,8 +2,7 @@
 <ivy-module version="2.0">
   <info organisation="ibiblio" module="management"/>
   <dependencies>
-	<dependency name="jmxremote_optional" rev="1.0.1_04-b58"
-	org="terracotta"/>
-	<dependency name="jmxremote" rev="1.0.1_04" org="terracotta"/>
+    <dependency name="jmxremote_optional" rev="1.0.1_04" org="terracotta"/>
+    <dependency name="jmxremote" rev="1.0.1_04" org="terracotta"/>
   </dependencies>
 </ivy-module>
