--- a/dso/branches/3.1/code/demos/pojo/sharedqueue/build.xml
+++ b/dso/branches/3.1/code/demos/pojo/sharedqueue/build.xml
@@ -10,6 +10,9 @@
   <property name="src.dir" location="src"/>
   <property name="build.dir" location="classes"/>
   <property name="api.jar" value="../../../lib/terracotta-api-@api.version@.jar"/>
+  <property name="servlet.jar" value="${basedir}/../../../lib/servlet-api-2.5-6.1.8.jar"/>
+  <property name="jetty.jar" value="${basedir}/../../../lib/jetty-6.1.8.jar"/>
+  <property name="jetty-util.jar" value="${basedir}/../../../lib/jetty-util-6.1.8.jar"/>
   
   <target name="init">
     <mkdir dir="${build.dir}"/>
@@ -17,7 +20,7 @@
 
   <target name="build" depends="init" description="compile the source">
     <javac target="1.5" source="1.5" srcdir="${src.dir}" destdir="${build.dir}"
-      classpath="lib/jetty-6.1.1.jar:lib/jetty-util-6.1.1.jar:lib/servlet-api-2.5-6.1.1.jar:${api.jar}"/>
+      classpath="${jetty.jar}:${jetty-util.jar}:${servlet.jar}:${api.jar}"/>
   </target>
 
   <target name="clean" description="clean up">
