--- a/dso/trunk/code/base/pom.xml
+++ b/dso/trunk/code/base/pom.xml
@@ -43,6 +43,11 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
+        <groupId>org.terracotta</groupId>
+        <artifactId>linked-child-process</artifactId>
+        <version>1.0.4</version>
+      </dependency>    
+      <dependency>
         <groupId>log4j</groupId>
         <artifactId>log4j</artifactId>
         <version>1.2.9</version>
