--- a/dso/trunk/code/base/pom.xml
+++ b/dso/trunk/code/base/pom.xml
@@ -217,6 +217,11 @@
         <version>1.3</version>
       </dependency>
       <dependency>
+        <groupId>cglib</groupId>
+        <artifactId>cglib-nodep</artifactId>
+        <version>2.2</version>
+      </dependency>      
+      <dependency>
         <!-- common -->
         <groupId>hsqldb</groupId>
         <artifactId>hsqldb</artifactId>
