--- a/dso/trunk/code/base/modules-base/ivy.xml
+++ b/dso/trunk/code/base/modules-base/ivy.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <ivy-module version="2.0">
-  <info organisation="ibiblio" module="modules-base"/>
-  <dependencies>
-    <dependency name="knopflerfish-tc" rev="2.0.1" org="terracotta"/>
+  <info organisation="org.terracotta" module="modules-base"/>
+  <dependencies defaultconf="default">
+    <dependency name="knopflerfish-tc" rev="2.0.1" org="knopflerfish-tc"/>
   </dependencies>
 </ivy-module>
