--- a/dso/trunk/code/base/clustered-surefire-2.3/ivy.xml
+++ b/dso/trunk/code/base/clustered-surefire-2.3/ivy.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <ivy-module version="2.0">
-  <info organisation="ibiblio" module="clustered-surefire-2.3"/>
-  <dependencies>
-    <!--
-    <dependency name="*** DEPENDENCY NAME ***" rev="*** DEPENDENCY REVISION ***" org="terracotta"/>
-    -->
-    <dependency name="junit" rev="3.8.1"/>
+  <info organisation="org.terracotta" module="clustered-surefire-2.3"/>
+  
+  <dependencies defaultconf="default">
+    <dependency name="junit" rev="3.8.1" org="junit"/>
   </dependencies>
+
 </ivy-module>
