--- a/dso/trunk/code/base/common-api/ivy.xml
+++ b/dso/trunk/code/base/common-api/ivy.xml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <ivy-module version="2.0">
-  <info organisation="ibiblio" module="common-api"/>
-  <dependencies>
-    <dependency name="commons-cli" rev="1.1"/>
-    <dependency name="commons-lang" rev="2.0" />
-    <dependency name="commons-io" rev="1.2"/>
-    <dependency name="concurrent" rev="1.3.4" />
-    <dependency name="jetty-util" rev="6.1.8" org="terracotta"/>
-    <dependency name="jmxremote" rev="1.0.1_04" org="terracotta"/>
-    <dependency name="knopflerfish-tc" rev="2.0.1" org="terracotta"/>
-    <dependency name="commons-httpclient" rev="3.0.1"/>
-    <dependency name="log4j" rev="1.2.9"/>
-    <dependency name="xmlbeans-jsr173-api" rev="1.0" org="terracotta"/>
-    <dependency name="xmlbeans" rev="2.4.0" org="terracotta"/>
-    <dependency name="xmlbeans-xpath" rev="2.4.0" org="terracotta"/>
+  <info organisation="org.terracotta" module="common-api"/>
+  <dependencies defaultconf="default">
+    <dependency name="commons-cli" rev="1.1" org="commons-cli"/>
+    <dependency name="commons-lang" rev="2.0" org="commons-lang"/>    
+    <dependency name="commons-io" rev="1.2" org="commons-io"/>    
+    <dependency name="concurrent" rev="1.3.4" org="concurrent"/>    
+    <dependency name="jetty-util" rev="6.1.8" org="org.mortbay.jetty"/>
+    <dependency name="jmxremote" rev="1.0.1_04" org="javax.management"/>
+    <dependency name="knopflerfish-tc" rev="2.0.1" org="knopflerfish-tc"/>
+    <dependency name="commons-httpclient" rev="3.1" org="commons-httpclient"/>
+    <dependency name="log4j" rev="1.2.9" org="log4j"/>  
+    <dependency name="xmlbeans-jsr173-api" rev="1.0" org="org.apache.xmlbeans"/>
+    <dependency name="xmlbeans" rev="2.4.0" org="org.apache.xmlbeans">
+      <exclude module="stax-api" org="stax" />
+    </dependency>
+    <dependency name="xmlbeans-xpath" rev="2.4.0" org="org.apache.xmlbeans">
+      <exclude module="saxon" org="net.sf.saxon" />
+    </dependency>
   </dependencies>
 </ivy-module>
