--- a/dso/trunk/code/base/common/ivy.xml
+++ b/dso/trunk/code/base/common/ivy.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <ivy-module version="2.0">
-  <info organisation="ibiblio" module="common"/>
-  <dependencies>    
-    <dependency name="bsh" rev="2.0b4" org="terracotta"/>
-    <dependency name="commons-cli" rev="1.1"/>
-    <dependency name="commons-collections" rev="3.1"/>
-    <dependency name="commons-io" rev="1.2"/>
-    <dependency name="commons-lang" rev="2.0"/>
-    <dependency name="commons-logging" rev="1.0.3"/>
-    <dependency name="concurrent" rev="1.3.4"/>
-    <dependency name="google-collect" rev="1.0-rc2"/>
-    <dependency name="knopflerfish-tc" rev="2.0.1" org="terracotta"/>
-    <dependency name="je" rev="3.3.82" org="terracotta"/>
-    <dependency name="jmxremote" rev="1.0.1_04" org="terracotta"/>
-    <dependency name="log4j" rev="1.2.9"/>
-    <dependency name="servlet-api-2.5" rev="6.1.8" org="terracotta"/>
-    <dependency name="slf4j-nop" rev="1.0.2" org="terracotta"/>
-    <dependency name="trove" rev="1.1-beta-5" org="terracotta"/>
+  <info organisation="org.terracotta" module="common"/>
+  <dependencies defaultconf="default">
+    <dependency name="bsh" rev="2.0b4" org="org.beanshell"/>
+    <dependency name="commons-cli" rev="1.1" org="commons-cli"/>
+    <dependency name="commons-collections" rev="3.1" org="commons-collections"/>
+    <dependency name="commons-io" rev="1.2" org="commons-io"/>
+    <dependency name="commons-lang" rev="2.0" org="commons-lang"/>
+    <dependency name="commons-logging" rev="1.0.3" org="commons-logging"/>
+    <dependency name="concurrent" rev="1.3.4" org="concurrent"/>
+    <dependency name="google-collections" rev="1.0-rc2" org="com.google.collections"/>
+    <dependency name="knopflerfish-tc" rev="2.0.1" org="knopflerfish-tc"/>
+    <dependency name="je" rev="3.3.82" org="berkeleydb"/>
+    <dependency name="jmxremote" rev="1.0.1_04" org="javax.management"/>
+    <dependency name="log4j" rev="1.2.9" org="log4j"/>
+    <dependency name="servlet-api-2.5" rev="6.1.8" org="org.mortbay.jetty"/>
+    <dependency name="slf4j-nop" rev="1.5.6" org="org.slf4j">
+      <exclude name="slf4j-api" org="org.slf4j"/>
+    </dependency>
+    <dependency name="trove" rev="1.1-beta-5" org="trove"/>
   </dependencies>
 </ivy-module>
