--- a/dso/trunk/code/base/dso-statistics/ivy.xml
+++ b/dso/trunk/code/base/dso-statistics/ivy.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <ivy-module version="2.0">
-  <info organisation="ibiblio" module="dso-statistics"/>
-  <dependencies>
-    <dependency name="commons-codec" rev="1.2"/>
-    <dependency name="commons-httpclient" rev="3.0.1"/>
-    <dependency name="h2" rev="1.0.67" org="terracotta"/>
-    <dependency name="log4j" rev="1.2.9"/>
+  <info organisation="org.terracotta" module="dso-statistics"/>
+  <dependencies defaultconf="default">
+    <dependency name="commons-httpclient" rev="3.1" org="commons-httpclient"/>
+    <dependency name="h2" rev="1.0.67" org="com.h2database"/>
+    <dependency name="log4j" rev="1.2.9" org="log4j"/>
   </dependencies>
 </ivy-module>
