--- a/dso/trunk/code/base/license-common/ivy.xml
+++ b/dso/trunk/code/base/license-common/ivy.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <ivy-module version="2.0">
-  <info organisation="ibiblio" module="license-common"/>
-  <dependencies>    
-  <dependency name="commons-cli" rev="1.1"/>
-	<dependency name="commons-io" rev="1.2"/>
-	<dependency name="commons-logging" rev="1.0.3"/>
-	<dependency name="log4j" rev="1.2.9"/>
-  <dependency name="yamlbeans" rev="0.9.2" org="terracotta"/>
+  <info organisation="org.terracotta" module="license-common"/>
+  <dependencies defaultconf="default">    
+    <dependency name="commons-cli" rev="1.1" org="commons-cli"/>
+    <dependency name="commons-io" rev="1.2" org="commons-io"/>
+    <dependency name="commons-logging" rev="1.0.3" org="commons-logging"/>
+    <dependency name="log4j" rev="1.2.9" org="log4j"/>
+    <dependency name="yamlbeans" rev="0.9.2" org="net.sourceforge"/>
   </dependencies>
 </ivy-module>
