--- a/dso/trunk/code/base/management/ivy.xml
+++ b/dso/trunk/code/base/management/ivy.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <ivy-module version="2.0">
-  <info organisation="ibiblio" module="management"/>
-  <dependencies>
-    <dependency name="jmxremote_optional" rev="1.0.1_04" org="terracotta"/>
-    <dependency name="jmxremote" rev="1.0.1_04" org="terracotta"/>
+  <info organisation="org.terracotta" module="management"/>
+  <dependencies defaultconf="default">
+    <dependency name="jmxremote_optional" rev="1.0.1_04" org="javax.management"/>
+    <dependency name="jmxremote" rev="1.0.1_04" org="javax.management"/>
   </dependencies>
 </ivy-module>
