--- a/dso/trunk/code/base/tim-get-tool/ivy.xml
+++ b/dso/trunk/code/base/tim-get-tool/ivy.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <ivy-module version="2.0">
-  <info organisation="ibiblio" module="tim-get-tool"/>
-  <dependencies>
-    <dependency name="guice" rev="1.0" org="terracotta"/>
+  <info organisation="org.terracotta" module="tim-get-tool"/>
+  <dependencies defaultconf="default">
+    <dependency name="guice" rev="1.0" org="com.google.code.guice"/>
   </dependencies>
 </ivy-module>
