--- a/dso/trunk/code/base/deploy/ivy.xml
+++ b/dso/trunk/code/base/deploy/ivy.xml
@@ -4,24 +4,24 @@
   
   <dependencies defaultconf="default">
     
-  	<dependency name="jetty" rev="6.1.8" org="org.mortbay.jetty"/>
-  	<dependency name="jetty-util" rev="6.1.8" org="org.mortbay.jetty"/>
-  	<dependency name="jfreechart" rev="1.0.11" org="jfree">
+    <dependency name="jetty" rev="6.1.8" org="org.mortbay.jetty"/>
+    <dependency name="jetty-util" rev="6.1.8" org="org.mortbay.jetty"/>
+    <dependency name="jfreechart" rev="1.0.11" org="jfree">
       <exclude module="gnujaxp" org="gnujaxp"/>
       <exclude module="junit" org="junit"/>
     </dependency>
-  	<dependency name="jcommon" rev="1.0.14" org="jfree">
+    <dependency name="jcommon" rev="1.0.14" org="jfree">
       <exclude module="gnujaxp" org="gnujaxp"/>
       <exclude module="junit" org="junit"/>
     </dependency>    
-  	<dependency name="jmxremote_optional" rev="1.0.1_04" org="javax.management"/>
-  	<dependency name="jmxremote" rev="1.0.1_04" org="javax.management"/>
-  	<dependency name="treemap" rev="2.5.1" org="treemap"/>
-  	<dependency name="jline" rev="0.9.9" org="jline">
+    <dependency name="jmxremote_optional" rev="1.0.1_04" org="javax.management"/>
+    <dependency name="jmxremote" rev="1.0.1_04" org="javax.management"/>
+    <dependency name="treemap" rev="2.5.1" org="treemap"/>
+    <dependency name="jline" rev="0.9.9" org="jline">
       <exclude module="junit" org="junit" conf="default"/>
     </dependency>
-  	<dependency name="commons-httpclient" rev="3.0.1" org="commons-httpclient"/>
-    
+    <dependency name="commons-httpclient" rev="3.0.1" org="commons-httpclient"/>
+    <dependency name="commons-codec" rev="1.2" org="commons-codec"/>
     <exclude module="junit" org="junit" conf="default"/>
     
   </dependencies>
