--- a/dso/trunk/code/base/dso-statistics/ivy.xml
+++ b/dso/trunk/code/base/dso-statistics/ivy.xml
@@ -3,6 +3,7 @@
   <info organisation="org.terracotta" module="dso-statistics"/>
   <dependencies defaultconf="default">
     <dependency name="commons-httpclient" rev="3.1" org="commons-httpclient"/>
+    <dependency name="commons-codec" rev="1.2" org="commons-codec"/>
     <dependency name="h2" rev="1.0.67" org="com.h2database"/>
     <dependency name="log4j" rev="1.2.9" org="log4j"/>
   </dependencies>
