--- a/dso/branches/3.1/code/base/buildconfig/distribution/dso-opensource.def.yml
+++ b/dso/branches/3.1/code/base/buildconfig/distribution/dso-opensource.def.yml
@@ -163,6 +163,7 @@ postscripts:
         - samples/sessions
   - maven-deploy:
       args:
+        - artifact_count: 10
         - groupId: org.terracotta
           artifact: parent
           srcfile: pom.xml
