add comment for new prop

--- a/dso/trunk/code/base/common/src.resources/com/tc/properties/tc.properties
+++ b/dso/trunk/code/base/common/src.resources/com/tc/properties/tc.properties
@@ -724,9 +724,11 @@ stats.printer.intervalInMillis = 5000
 
 ###########################################################################################
 # Section :  EnterpriseLicenseResovler
-# license.resource.path                       - Resource path to license key
-# license.url                                 - URL to license key
+# productkey.resource.path                       - Resource path to product key
+# productkey.url                                 - URL to product key
+# productkey.path                                - path to product key
 ###########################################################################################
-#license.resource.path=
-#license.url=
+#productkey.resource.path=
+#productkey.url=
+#productkey.path=
 
