Install terracotta-hibernate-cache during kit build.

--- a/dso/branches/3.1/code/base/buildconfig/distribution/dso-opensource.def.yml
+++ b/dso/branches/3.1/code/base/buildconfig/distribution/dso-opensource.def.yml
@@ -146,6 +146,7 @@ postscripts:
       args:
         - tim-apache-struts-1.1
         - tim-jetty-6.1
+        - terracotta-hibernate-cache
   - inject-forge-tims:
       args:
         - tims: 
