--- a/dso/branches/3.1/code/base/buildconfig/distribution/dso-enterprise.def.yml
+++ b/dso/branches/3.1/code/base/buildconfig/distribution/dso-enterprise.def.yml
@@ -129,6 +129,7 @@ postscripts:
       args:
         - tim-apache-struts-1.1
         - tim-jetty-6.1
+        - terracotta-hibernate-cache
   - inject-forge-tims:
       args:
         - tims: 
