have to explicitly declare what to package in the notices folder

--- a/dso/trunk/code/base/buildconfig/distribution/dso-opensource.def.yml
+++ b/dso/trunk/code/base/buildconfig/distribution/dso-opensource.def.yml
@@ -30,6 +30,8 @@ bundled_components:
           - thirdpartylicenses
           - disclaimer
           - license
+          - INSTALL
+          - WELCOME
   - shared-base:
       documentations:
         install_directory: docs
