--- a/dso/trunk/code/base/buildconfig/global-filters.def.yml
+++ b/dso/trunk/code/base/buildconfig/global-filters.def.yml
@@ -3,7 +3,7 @@ filtered_files:
   - **/*.xml
   - **/MANIFEST.MF
 filters:
-  - include.snapshots: <%= !(config_source['final_kit'] == 'true') %>
+  - include.snapshots: <%= !(config_source['kit-type'] == 'final') %>
 
   # automatically define all config_source values as filters
   <% for key in config_source.keys %>
