add sigarstats in dso-l1

--- a/dso/trunk/code/base/modules.def.yml
+++ b/dso/trunk/code/base/modules.def.yml
@@ -227,6 +227,7 @@ modules:
         - management-api
         - thirdparty
         - thirdparty-api
+        - sigarstats
   - dso-memory-datastore:
       options:
         jdk: J2SE-1.5
