--- a/update-checker/update-list.properties
+++ b/update-checker/update-list.properties
@@ -5,7 +5,12 @@
 # general.notice = This notice should rarely, if ever, be used as everyone running the console\nwill see it
 
 ## 3.1.0-stable0 -- 
-3.1.0-stable0.updates			= 
+3.1.0-stable1.updates			= 
+3.1.0-stable1.notices			= Terracotta 3.1.0-stable1 is the latest milestone build of the upcoming Terracotta 3.1 release. You should only use Terracotta 3.1.0-stable1 if you are a beta tester and/or are comfortable experimenting with new unreleased software.
+3.1.0-stable1.release notes	= https://jira.terracotta.org/jira/browse/CDV?report=com.atlassian.jira.plugin.system.project:changelog-panel
+
+## 3.1.0-stable0 -- 
+3.1.0-stable0.updates			= 3.1.0-stable1
 3.1.0-stable0.notices			= Terracotta 3.1.0-stable0 is the latest milestone build of the upcoming Terracotta 3.1 release. You should only use Terracotta 3.1.0-stable0 if you are a beta tester and/or are comfortable experimenting with new unreleased software.
 3.1.0-stable0.release notes	= https://jira.terracotta.org/jira/browse/CDV?report=com.atlassian.jira.plugin.system.project:changelog-panel
 
