need to TerracottaHibernateQuickStartGuide to descriptors

--- a/dso/trunk/code/base/buildconfig/distribution/dso-enterprise.def.yml
+++ b/dso/trunk/code/base/buildconfig/distribution/dso-enterprise.def.yml
@@ -37,6 +37,7 @@ bundled_components:
         guides:
           - TerracottaDSOGuide
           - TerracottaSessionsQuickStart
+          - TerracottaHibernateQuickStartGuide
         references:
           - tc-config-reference
   - common:
