--- a/reflector/reflector.properties
+++ b/reflector/reflector.properties
@@ -34,6 +34,7 @@ default.update.properties=http://svn.terracotta.org/svn/tc/update-checker/update
 
 ### Start 3.1 --Note: KitID 3.1 is referenced in 3.1, it will point to the current docs
 3.1.betakit=http://s3.amazonaws.com/terracotta-3.1-beta/terracotta-3.1.0-beta.tar.gz
+3.1.HibernateQuickStart=http://www.terracotta.org/web/display/orgsite/Terracotta+for+Hibernate
 3.1.Forums=http://forums.terracotta.org/forums/forums/list.page
 3.1.SupportServices= http://www.terracotta.org/web/display/enterprise/Support
 3.1.Documentation=http://www.terracotta.org/web/display/docs/Home
