--- a/reflector/reflector.properties
+++ b/reflector/reflector.properties
@@ -129,7 +129,7 @@ default.update.properties=http://svn.terracotta.org/svn/tc/update-checker/update
 2.6.ApacheStrutsConfigModule=http://www.terracotta.org/confluence/display/integrations/Apache+Struts+1.1
 2.6.CglibConfigModule=http://www.terracotta.org/confluence/display/integrations/CGLIB
 2.5.iBatisConfigModule=http://www.terracotta.org/confluence/display/integrations/iBatis
-2.6.LuceneConfigModule=http://www.terracotta.org/web/display/orgsite/Lucene+Integration
+2.6.LuceneConfigModule=http://www.terracotta.org/web/display/orgsite/Integrations+Encyclopedia#IntegrationsEncyclopedia-Lucene
 
 ### Start 2.5 
 2.5.PojoQuickStart=http://www.terracotta.org/confluence/display/howto/POJO+Quick+Start
