CDV-1361: allow tim-get to talk to authenticated proxy

--- a/dso/trunk/code/base/tim-get-tool/ivy.xml
+++ b/dso/trunk/code/base/tim-get-tool/ivy.xml
@@ -3,5 +3,6 @@
   <info organisation="org.terracotta" module="tim-get-tool"/>
   <dependencies defaultconf="default">
     <dependency name="guice" rev="1.0" org="com.google.code.guice"/>
+    <dependency name="commons-codec" rev="1.2" org="commons-codec"/>
   </dependencies>
 </ivy-module>
