--- a/dso/trunk/code/base/tim-get-tool/src.resources/tim-get.properties
+++ b/dso/trunk/code/base/tim-get-tool/src.resources/tim-get.properties
@@ -32,6 +32,9 @@ org.terracotta.modules.tool.relativeUrlBase = http://www.terracotta.org/download
 # Uncomment and set to use a proxy when connecting outside a protected network.
 # org.terracotta.modules.tool.proxyUrl = http://PROXY:PORT
 
+# If your proxy requires authentication, you can specify it here or set environment variable TIMGET_PROXY_AUTH
+# org.terracotta.modules.tool.proxyAuth = username:password
+
 # The cache folder where the cached TIM index is stored. By default it goes to the system's 
 # temp directory
 # Uncomment if you want to store the cache somewhere specific.
